# specification-centralized-backend

./: .gitignore  README.md  docker build.txt  docker-compose.envoy.yml  docker-compose.pypiserver.yml  envoy.dev.yml  nginx.conf  start-envoy.sh
specification_centralized_admin_project/: .env.dev  (+4 more)
specification_centralized_core_project/: .env.dev  README.md  manage.py  pyproject.toml  requirements.txt
specification_centralized_core_project/specification_centralized_core/: apps.py
specification_centralized_core_project/specification_centralized_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
specification_centralized_core_project/specification_centralized_core/migrations/: 0001_initial.py  init_data.py
specification_centralized_core_project/specification_centralized_core/models/: __init__.py  base_model.py  category_model.py  code_implementation_trace_log_model.py  code_implementation_trace_model.py  complexity_model.py  component_model.py  function_model.py  jama_item_type_model.py  notification_model.py  priority_model.py  process_model.py  project_milestone_model.py  project_model.py  project_setting_model.py  project_specification_milestone_baseline_model.py  project_specification_model.py  specification_import_type_model.py  specification_model.py  specification_revision_model.py  specification_test_case_model.py  specification_test_suite_model.py  test_execution_trace_log_model.py  test_execution_trace_model.py  user_setting_model.py
specification_centralized_core_project/specification_centralized_core_project/: asgi.py  settings.py  urls.py  wsgi.py
(+143 files in other folders)
