[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specification-centralized-core"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A reusable Django app for centralizing specifications."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "Django>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["specification_centralized_core*"]